--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -48,6 +48,7 @@
 				
 				<section>
 					<p>Meetup AFUP / Web Front</p>
+					<p>Un talk frontend pour développeurs.ses mais aussi créas, UI</p>
 					<p>"Le moteur CSS envoûté par la magie d'Houdini"</p>
 					<p>Dessin et animations nouvelle génération, et plus encore</p>
 					<p><img src="awe.png" alt=""></p>
@@ -77,12 +78,21 @@
 					<h2>... et vous !</h2>
 				</section>
 
-				<section>
-					<h2>Toi, public</h2>
-					<p class="fragment fade-up">Qui fait du front/UI/animation/print/vidéo ?</p>
-					<p class="fragment fade-up">Ratio natif iOS/Android/autre (hors WebViews) &amp; web pur ?</p>
-					<p class="fragment fade-up">Exemples de dernières demandes clientes ou créas complexes ?</p>
-				</section>
+			<section>
+				<h2>Toi, public</h2>
+				<p class="fragment fade-up">Qui fait du front/UI/animation/print/vidéo ?</p>
+				<p class="fragment fade-up">Ratio natif iOS/Android/autre (hors WebViews) &amp; web pur ?</p>
+				<p class="fragment fade-up">Exemples de dernières demandes clientes ou créas complexes ?</p>
+			</section>
+
+			<section>
+				<h2>😿 CSS, la mal aimée 😿</h2>
+				<p>C'est assez vrai. floats, tables, !important, préfixes -webkit, -ms, z-index</p>
+				<p>Trop de libertés laissées aux fabricants de navigateurs, specs trop souples = bugs, inconnues, mues (grid)</p>
+				<p>Travaux HTML des groupes W3C et WhatWG séparés jusqu'en... Mai 2019</p>
+				<p class="fragment fade-up">C'est le passé. Ca va -globalement- beaucoup mieux, malgré quelques tensions entre Moz et Google</p>
+				<p class="fragment fade-up">Membres clef du CSSWG très publics : Rachel Andrew (Smashing), Lea Verou (MIT), Tab Atkins (Google), Jen Simmons (Moz)</p>
+			</section>
 
 			<section>
 				<h2>✨ CSS Houdini ✨</h2>
@@ -110,8 +120,6 @@
 				<p class="fragment fade-up">... ça t'empêche pas de commit sur OSS si tu sais/peux/veux le faire, ou trouver des compromis créas (chifoumi ?)</p>
 				<small class="fragment fade-up">On cite un hit musical, une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
 			</section>
-
-		
 
 			<section>
 				<h2>Buts et acteurs</h2>
@@ -472,7 +480,7 @@ background-image:paint('compteur')
 				<section>
 					<h2>Merci</h2>
 					<p>Speakers wanted</p>
-					<p>sur des sujets front/privacy pour un Meetup pur web</p>
+					<p>sur des sujets front/privacy, pour un Meetup pur web</p>
 					<p>@laurentperez / Slack Comm MPL</p>
 				</section>
 
@@ -480,7 +488,6 @@ background-image:paint('compteur')
 		</div>
 
 		<script src="js/reveal.js"></script>
-
 		<script src="/socket.io/socket.io.js"></script>
 		<script>
 			// More info about config & dependencies:
