--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -87,9 +87,9 @@
 
 			<section>
 				<h2>😿 CSS, la mal aimée 😿</h2>
-				<p>C'est assez vrai. floats, tables, !important, préfixes -webkit, -ms, z-index</p>
+				<p>C'est assez vrai. floats, tables, !important, préfixes -webkit, -ms, z-index, negative margins, positions, ...</p>
 				<p>Trop de libertés laissées aux fabricants de navigateurs, specs trop souples = bugs, inconnues, mues (grid)</p>
-				<p>Travaux HTML des groupes W3C et WhatWG séparés jusqu'en... Mai 2019</p>
+				<p>Travaux HTML des groupes W3C (Open Web) et WhatWG (fabricants) séparés jusqu'en... Mai 2019</p>
 				<p class="fragment fade-up">C'est le passé. Ca va -globalement- beaucoup mieux, malgré quelques tensions entre Moz et Google</p>
 				<p class="fragment fade-up">Membres clef du CSSWG très publics : Rachel Andrew (Smashing), Lea Verou (MIT), Tab Atkins (Google), Jen Simmons (Moz)</p>
 			</section>
