--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -61,15 +61,15 @@
 					Pour du dessin et animations nouvelle génération... et plus encore
 
 					Le meetup AFUP est notre hôte à titre exceptionnel pour ce 1er talk 
-					entièrement dédié au frontend Web/CSS/JS, et quel meilleur sujet qu'Houdini, 
-					une nouvelle boîte à outils créative initiée par Google, Apple et Mozilla ?
+					entièrement dédié au frontend Web/CSS, avec un peu de JS pour contacter
+					les fonctions d'Houdini
 
-					Houdini pousse les portes du moteur CSS et les ouvre aux développeurs.ses frontend mais également
-					aux créas, avec à la clef un jeu étendu de possibilités de dessin, d'animation, de propriétés, 
+					Houdini issu de travaux communs Google/Apple/Mozilla repousse les portes du moteur CSS et les ouvre davantage aux développeurs.ses frontend mais également
+					aux créas/UI, avec à la clef un jeu étendu de possibilités de dessin, d'animation, de propriétés, 
 					et même de layout.
 
-					Le talk présente toutes ces nouvelles possibilités
-					Avec surtout des démos de cas d'usages réels à la clé !
+					Le talk présente toutes ces nouvelles possibilités, et les besoins auxquelles elles répondent.
+					Avec des démos de cas d'usages réels à la clé !
 
 				-->
 				<section>
@@ -116,7 +116,7 @@
 				<h2>Qui te donne - ou pas - le couteau ?</h2>
 				<p class="fragment fade-up">Les fabricants de navigateurs, et de librairies - toi compris !</p>
 				<p class="fragment fade-up">Houdini, la reine des neiges dans ton navigateur ❄️</p>
-				<p class="fragment fade-up">Libéré(e), délivré(e) de limites du moteur des librairies tierces. <em>Tu n'attends plus ta fonction : tu peux l'écrire, la partager dans un cadre standard Web</em></p>
+				<p class="fragment fade-up">Libéré(e), délivré(e) de limites du moteur des librairies tierces. <em>Tu n'attends plus ta fonction : tu peux l'écrire, la partager dans un cadre standard Web, étendre une fonction existante</em></p>
 				<p class="fragment fade-up">... ça t'empêche pas de commit sur OSS si tu sais/peux/veux le faire, ou trouver des compromis créas (chifoumi ?)</p>
 				<small class="fragment fade-up">On cite un hit musical, une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
 			</section>
@@ -132,9 +132,9 @@
 			</section>
 
 			<section>
+				<p>Le DFO et son navigateur web</p>
 				<p><img src="pai.jpg" width="600px" alt=""></p>
 				<p>QCM : où est ton client, ton/ta créa UI UX, ton navigateur, ton budget, ta deadline, ton/ta collègue super doué(e) qui t'aide en front, jQuery, ton DOM, ta CSS ... toi ?</p>
-				<p class="fragment fade-up">Ce qui se passe dans ton code reste secret dans ton code. Nope. Pense aux autres, c'est !important</p>
 			</section>
 
 			<section>
@@ -146,7 +146,13 @@
 			</section>
 
 			<section>
-				<p>Division en 6 nouvelles grandes APIs</p>
+				<p>Houdini pas difficile, ni obscur. C'est juste 5 nouvelles techniques sur des bases CSS</p>
+				<p><img src="posabs.png" width="400px" alt=""></p>
+				<small>"CSS vertical align" sur Google : Environ 10 600 000 résultats</small>
+			</section>
+
+			<section>
+				<p>Division en 5 nouvelles grandes APIs</p>
 				<p><a href="https://github.com/w3c/css-houdini-drafts">https://github.com/w3c/css-houdini-drafts</a> (repo des specs)</p>
 				<p><a href="https://drafts.css-houdini.org">https://drafts.css-houdini.org</a> (specs)</p>
 				<ul>
@@ -155,9 +161,9 @@
 					<li class="fragment fade-up">Paint API (PAPI)</li>
 					<li class="fragment fade-up">Worklet Animation API (WAPI ...sur WAAPI)</li>
 					<li class="fragment fade-up">Layout API (LAPI)</li>
-					<li class="fragment fade-up">Font Metrics API (FMAPI) *</li>
+					<li class="fragment fade-up">... 6e optionnelle, Font Metrics API (FMAPI) *</li>
 					</ul>
-				<small class="fragment fade-up">* = pas encore d'implémentation visible</small>
+				<small class="fragment fade-up">* = pas encore d'implémentation visible, pas essentielle</small>
 			</section>
 
 			<section>
@@ -187,6 +193,7 @@
 				<p>donc : CSS @support(xxx){....} + JS if('xxx' in CSS)</p>
 				<p>ça fait quelques années que les prefix -webkit -moz -ms ont été abandonnés pour nouvelles fonctions</p>
 				<p>à la place, flags explicites sous 'Experimental features'</p>
+				<p>et Progressive Enhancement, toujours</p>
 			</section>
 
 			<section>
@@ -391,7 +398,7 @@ background-image:paint('compteur')
 				<p class="fragment fade-up">Conteneur de <em>LayoutChild/Fragments</em> dans un <em>ParentLayout</em></p>
 				<small class="fragment fade-up">Le <em>Parent</em> a des borders, paddings : les <em>Edges</em>. Entre les <em>Edges</em>, on a des <em>Constraints</em>. Les <em>LayoutChild</em> sont dans ces <em>Constraints</em> et ont des <em>Fragments</em></small>
 				<p class="fragment fade-up">La *clef* : chaque <em>Fragment</em> a un <em>inlineOffset/blockOffset</em> pour le positionner par rapport à la box de son <em>Child</em></p>
-				<p>C'est - en gros - du position:relative; dynamique, précalculable, dans un <em>wireframe</em> nommé</p>
+				<p>C'est - très proche - d'un position:relative; dynamique, précalculable, dans un <em>wireframe</em> nommé</p>
 			</section>
 
 			<section>
@@ -400,7 +407,7 @@ background-image:paint('compteur')
 				<small class="fragment fade-up">4bar est ici 4 Fragments empilés, L 3 et le 4e a un offset</small>
 				<p class="fragment fade-up">Le calcul des blocs Fragments est non blocking _asynchrone_ par les moteurs next-gen (LayoutNG CR, WebRender FF) : le futur Fragment peut dépendre de calculs différés ou longs : Promise JS</p>
 				<p class="fragment fade-up">Cas d'usage : architecture, UI normés (affichage dash militaire/industriel/logiciel, presse écrite, eBooks, ePub Comics)</p>
-				<small class="fragment fade-up">des utilisaturs.trices de QuarkXPress/InDesign ?</small>
+				<small class="fragment fade-up">des utilisaturs.trices de QuarkXPress/InDesign pour du print ?</small>
 				<p><a href="../cssp">demo</a></p>
 			</section>
 
@@ -410,7 +417,7 @@ background-image:paint('compteur')
 				<p>placer des blocs custom c'est cool mais : on a parfois besoin de gérer du texte/symboles dedans</p>
 				<small class="fragment fade-up">ex : faire son propre line-breaking, connaître les tailles réelles des symboles math chimie ∑ √ ∞, des ligatures Œ, Æ, محرك, et cætera … &lt;- c'est des points de suspension, pas '...' </small>
 				<p class="fragment fade-up">exposer seulement la Font ne suffit pas : il faut descendre au niveau du <em>glyphe</em> dessiné par chaque navigateur, à sa façon</p>
-				<p class="fragment fade-up">la FMAPI donnera un objet JS FontMetrics des glyphes dessinés, utilitaire</p>
+				<p class="fragment fade-up">la FMAPI donnera un objet JS FontMetrics des glyphes dessinés, utilitaire interne</p>
 			</section>
 				
 			<section>
@@ -423,7 +430,7 @@ background-image:paint('compteur')
 
 			<section>
 				<h2>Pour suivre / plus loin</h2>
-				<p><a href="https://github.com/w3c/css-houdini-drafts/wiki/Meeting-Planning-Pages">https://github.com/w3c/css-houdini-drafts/wiki/Meeting-Planning-Pages</a> (meetings trimestriels CSSWG)</p>
+				<p><a href="https://github.com/w3c/css-houdini-drafts/wiki/Meeting-Planning-Pages">https://github.com/w3c/css-houdini-drafts/wiki/Meeting-Planning-Pages</a> (transcripts meetings trimestriels CSSWG)</p>
 				<p><a href="https://www.chromium.org/teams">https://www.chromium.org/teams</a> (rétros agiles)</p>
 				<p><a href="https://houdini.glitch.me">https://houdini.glitch.me</a> (récapitulatif illustré)</p>
 				<p>Q2 2020, rapprochement de Paint API et Web Animations API :</p>
