structure goals abstract

--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -61,15 +61,14 @@
 					Pour du dessin et animations nouvelle génération... et plus encore
 
 					Le meetup AFUP est notre hôte à titre exceptionnel pour ce 1er talk 
-					entièrement dédié au frontend Web/CSS, avec un peu de JS pour contacter
-					les fonctions d'Houdini
+					entièrement dédié au frontend Web/CSS, avec un peu de JS
 
-					Houdini issu de travaux communs Google/Apple/Mozilla repousse les portes du moteur CSS et les ouvre davantage aux développeurs.ses frontend mais également
+					Houdini, issu de travaux de Google/Apple/Mozilla, pousse les portes du moteur CSS et les ouvre encore davantage aux développeurs.ses frontend mais également
 					aux créas/UI, avec à la clef un jeu étendu de possibilités de dessin, d'animation, de propriétés, 
 					et même de layout.
 
-					Le talk présente toutes ces nouvelles possibilités, et les besoins auxquelles elles répondent.
-					Avec des démos de cas d'usages réels à la clé !
+					Le talk vous emmène en balade explorer ces nouvelles possibilités, et les besoins auxquelles elles répondent.
+					Avec démos de cas d'usages réels à la clé !
 
 				-->
 				<section>
@@ -434,7 +433,7 @@ background-image:paint('compteur')
 				<p><a href="https://www.chromium.org/teams">https://www.chromium.org/teams</a> (rétros agiles)</p>
 				<p><a href="https://houdini.glitch.me">https://houdini.glitch.me</a> (récapitulatif illustré)</p>
 				<p>Q2 2020, rapprochement de Paint API et Web Animations API :</p>
-				<p>On peut imaginer un IDE en ligne 100% web, gratuit et open source qui remplacerait Sketch/Adobe XD, 100% extensible car basé sur des APIs ouvertes</p>
+				<p>On peut imaginer un IDE en ligne 100% web, gratuit et open source qui remplacerait Sketch/Adobe XD, 100% extensible car basé sur des standards web</p>
 				<p>Plus de "on peut pas le faire en CSS" : mais ça va demander des compétences de dessin canvas2D et animation... FullFullStack ?</p>
 			</section>
 
