--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -369,6 +369,15 @@ background-image:paint('compteur')
 			</section>
 
 			<section>
+				<h2>Usage réel, Adobe</h2>
+				<p><a href="https://airbnb.design/lottie/">Lottie (AirBnb)</a></p>
+				<p>Librairie pour Android/iOS/React Native... et web pur</p>
+				<p>Importe les animations depuis Adobe After Effects</p>
+				<p>La version web n'était pas très performante, <a href="http://www.chromium.org/teams/animations/highlights-archive/april-2019-volume-ii">son moteur a été porté sous PaintWorklet</a></p>
+				<p><a href="https://flackr.github.io/lottie-web/demo/bodymovin/">demo + animation panel</a></p>
+			</section>
+
+			<section>
 				<p>Sprints et roadmap : <a href="https://www.chromium.org/teams/animations/animation-objectives">https://www.chromium.org/teams/animations/animation-objectives</a></p>
 				<p>Pour le moment (Août), <em>GroupEffect</em> = groupe de <em>KeyFrameEffects</em> est caché (flag, ya plus de -prefix)</p>
 				<p class="fragment fade-up">exemple : démarrer l'animation B quand la A est à 50%, démarrer B, C, D en même temps mais avec des offsets (= delay/parallaxe/stagger), pause() ou play() les effets en bloc</p>
