--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -288,7 +288,8 @@ CSS.registerProperty({
 				<p class="fragment fade-up">... tu peux déjà passer une property arbitraire non typée façon</p>
 					 <pre class="fragment fade-up"><code class="css">
 --madata:'{foo:1,bar:2}';
-/* c'est moche, mais tu peux... en attendant postMessage (spoiler) */
+/* c'est moche, mais tu peux...
+en attendant postMessage (spoiler) */
 					 </code></pre>
 			</section>
 
@@ -303,6 +304,7 @@ CSS.registerProperty({
 --rpm: 6000;
 /* jauge rectangle en Ferrari, arc rectangles en Motec */
 background-image:paint('compteur')
+/* branche ta voiture en WebUSB, meetup chez Tesla ? */
 				</code></pre>
 				<img src="488.jpeg" width="350px" alt="">
 				<img src="motec.jpeg" width="350px" alt="">
