--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -348,7 +348,7 @@ background-image:paint('compteur')
 				<p class="fragment fade-up">Et ce sont des classiques qui déclenchent un repaint</p>
 				<p class="fragment fade-up"><a href="https://csstriggers.com/">https://csstriggers.com/</a></p>
 				<p class="fragment fade-up">Mais la Worklet n'est pas sur la Main thread : no main UI jank si son JS rame</p>
-				<small class="fragment fade-up">fini les hacks risqués translate3d(0,0,0), la Worklet promeut d'office l'élément en Layer vers le Compositor</small>
+				<small class="fragment fade-up">fini les hacks risqués translate3d(0,0,0), la Worklet promeut l'élément en Layer vers le Compositor</small>
 			</section>
 
 			<section>
@@ -361,13 +361,13 @@ background-image:paint('compteur')
 			</section>
 
 			<section>
-				<p>La Worklet n'est <em>PAS sur la Compositor thread</em>, elle s'y <em><a href="https://chromium.googlesource.com/chromium/src/+log/f7bac9f65e868e7cce29a09a2fc721cb3e9f9ebb/cc/paint/paint_worklet_layer_painter.h">async</a></em></p>
-				<p>Car si tu fais du bitcoin dans la Worklet, ça ralentirait le Compositing</p>
-				<p class="fragment fade-up">Elle va <em>au minimum</em> chercher à performer comme <em>requestAnimationFrame</em> : à 60fps, et bénéficie des optims du Compositor (ex: cache, delta pixels)</p>
+				<p>La Worklet n'est <em>PAS sur la Compositor thread</em>, elle s'y <em><a href="https://chromium.googlesource.com/chromium/src/+/master/cc/paint/paint_worklet_layer_painter.h">defer</a></em></p>
+				<p>Car si tu fais du bitcoin dans la Worklet, ça ralentirait le Compositing : seuls les <em>KeyframeEffects</em> l'intéressent</p>
+				<p class="fragment fade-up">Elle va <em>au minimum</em> chercher à performer comme <em>requestAnimationFrame</em> : à 60fps, et bénéficie des optims du Compositor (ex: cache, interpolation)</p>
 				<p class="fragment fade-up">Si ton animate est trop souvent &gt; 16ms (1/60), le moteur peut t'offthread (kill and revive) ou throttle : un 30fps fluide est meilleur qu'un 60fps qui drop</p>
 				<small class="fragment fade-up">60fps est une limite basse, l'iPad Pro est à 120Hz, l'Oculus/Vive à 90Hz. Chrome, IE et FF peuvent faire du 240Hz et même 480Hz sur des moniteurs usine</small>
 				<br>
-				<small class="fragment fade-up">nb: Safari iOS <a href="https://github.com/WebKit/webkit/blob/master/Source/WebCore/page/RenderingUpdateScheduler.cpp">limite certains écrans à 60fps</a> et toutes les iframe sans interaction <a href="https://trac.webkit.org/changeset/215070/webkit">à 30fps</a></small>
+				<small class="fragment fade-up">Safari iOS <a href="https://github.com/WebKit/webkit/blob/master/Source/WebCore/page/RenderingUpdateScheduler.cpp">limite certains écrans à 60fps</a>, toutes les iframes sans interaction <a href="https://trac.webkit.org/changeset/215070/webkit">à 30fps</a></small>
 			</section>
 
 			<section>
